# 8086tiny

./: 8086tiny.cpp  8086tiny.h  CMakeLists.txt  PVS-Studio.cmake  runme
